add auth example
